gitignore geupdate, zodat draft en prebeersel files niet meer bij het project zijn op github

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@
 # important info
 /project/.env
 
+
+
+# draft files en probeersels/testen
+draft.ipynb
+draft_openai.ipynb
+draft_openai_2.ipynb
+
+story_log.txt
+items.json
